fix: flex-wrap footer links when they do not fit in single row
PT-1916

Sometimes the footer links does not fit in a single row, so they should
be wrapped to the next line.

--- a/src/domain/app/footer/footer.module.scss
+++ b/src/domain/app/footer/footer.module.scss
@@ -5,3 +5,7 @@
   margin-top: calc(var(--spacing-xl) * -1);
   --footer-background: var(--color-black-10) !important;
 }
+
+.footerBase div[class^='FooterBase-module_links'] {
+  flex-wrap: wrap;
+}
